[gd_scene load_steps=3 format=3 uid="uid://boi3ryi6phtc8"]

[ext_resource type="Script" path="res://Scripts/UI/settings_menu.gd" id="1_83qjl"]

[sub_resource type="LabelSettings" id="LabelSettings_uymxy"]
font_size = 60
font_color = Color(0.688904, 0.456932, 0.508478, 1)
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_83qjl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.221124, 0.619355, 0.768739, 1)

[node name="SettingsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -116.0
offset_right = 116.0
offset_bottom = 83.0
grow_horizontal = 2
text = "Settings"
label_settings = SubResource("LabelSettings_uymxy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.75
offset_top = 20.0
offset_right = 156.25
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VolumeControls" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MainVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/VolumeControls"]
layout_mode = 2
offset_top = -141.0
offset_right = 250.0
offset_bottom = -118.0
text = "Main Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainVolumeHSlider" type="HSlider" parent="MarginContainer/VBoxContainer/VolumeControls"]
layout_mode = 2
offset_top = -114.0
offset_right = 250.0
offset_bottom = -98.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/VolumeControls"]
layout_mode = 2
offset_top = -94.0
offset_right = 250.0
offset_bottom = -71.0
text = "Music Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolumeHSlider" type="HSlider" parent="MarginContainer/VBoxContainer/VolumeControls"]
layout_mode = 2
offset_top = -67.0
offset_right = 250.0
offset_bottom = -51.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/VolumeControls"]
layout_mode = 2
offset_top = -47.0
offset_right = 250.0
offset_bottom = -24.0
text = "SFX Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXVolumeHSlider" type="HSlider" parent="MarginContainer/VBoxContainer/VolumeControls"]
layout_mode = 2
offset_top = -20.0
offset_right = 250.0
offset_bottom = -4.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="ScreenControls" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="MarginContainer/VBoxContainer/ScreenControls"]
layout_mode = 2
offset_top = 4.0
offset_right = 250.0
offset_bottom = 27.0
text = "Resolution"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resolutions" type="OptionButton" parent="MarginContainer/VBoxContainer/ScreenControls"]
layout_mode = 2
offset_top = 31.0
offset_right = 250.0
offset_bottom = 62.0
selected = 0
item_count = 5
popup/item_0/text = "1920x1080"
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2
popup/item_3/text = "1024x600"
popup/item_3/id = 3
popup/item_4/text = "640x360"
popup/item_4/id = 4

[node name="FullscreenCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/ScreenControls"]
layout_mode = 2
offset_top = 66.0
offset_right = 250.0
offset_bottom = 97.0
text = "Fullscreen"

[node name="ApplyButton" type="Button" parent="MarginContainer/VBoxContainer/ScreenControls"]
layout_mode = 2
offset_top = 101.0
offset_right = 250.0
offset_bottom = 132.0
text = "Apply
"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -41.0
offset_right = 99.0
offset_bottom = -10.0
grow_vertical = 0
text = "Back"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/ScreenControls/Resolutions" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ScreenControls/FullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ScreenControls/ApplyButton" to="." method="_on_apply_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
